force-app/main/default/objects/Apttus__Wizard2__c/Apttus__Wizard2__c.object-meta.xml
<CustomObject>
    <description>A runtime instance of the wizard design</description>
    <label>Wizard</label>
    <nameField>
        <label>Wizard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>