force-app/main/default/objects/Apttus__Wizard2__c/fields/Apttus__Action__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Action__c</fullName>
    <formula>IF(TEXT(Apttus__Status__c) = &apos;In Progress&apos;, HYPERLINK(&quot;/apex/Wizard?id=&quot; &amp;Id,&quot;Continue&quot;), HYPERLINK(&quot;/apex/Wizard?id=&quot; &amp;Id,&quot;Review&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action (DEPRECATED)</label>
    <type>Text</type>
</CustomField>