force-app/main/default/objects/Apttus__Wizard2__c/fields/Apttus__ContextId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ContextId__c</fullName>
    <description>Context record this wizard record is associated with</description>
    <inlineHelpText>Context record this wizard record is associated with</inlineHelpText>
    <label>Context Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>