force-app/main/default/objects/Apttus__Wizard2__c/fields/Apttus__ContextType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ContextType__c</fullName>
    <description>Context type this wizard record is associated with</description>
    <inlineHelpText>Context type this wizard record is associated with</inlineHelpText>
    <label>Context Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>