force-app/main/default/objects/Apttus__Wizard2__c/fields/Apttus__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ExternalId__c</fullName>
    <description>External id</description>
    <externalId>true</externalId>
    <inlineHelpText>External id</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>