force-app/main/default/objects/Apttus__Wizard2__c/fields/Apttus__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Status__c</fullName>
    <description>Status of this wizard runtime</description>
    <inlineHelpText>Status of this wizard runtime</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>