force-app/main/default/objects/Apttus__Wizard2__c/fields/Apttus__SubmittedById__c.field-meta.xml
<CustomField>
    <fullName>Apttus__SubmittedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the user who submitted this runtime</description>
    <inlineHelpText>Lookup to the user who submitted this runtime</inlineHelpText>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Wizard</relationshipName>
    <type>Lookup</type>
</CustomField>